tdf#96572 firebird correctly transmit request for NULL

even if column is not nullable

Change-Id: I72ceda68e983125aef26c8f0aacc06320bd16b77